packages/cashc/test/compiler/ParseError/array_parameter.cash
contract Test(int x, string y) {
    function hello(int[] a) {
    }

    function world(int a) {
    }
}
